<resources>
    <string name="app_name">ElorClass</string>
    <string name="title">Titulo</string>
    <string name="titlelogin">LOGIN</string>
    <string name="login">Login</string>
    <string name="register">Registro</string>
    <string name="forgotten_password">Olvidó contraseña</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="remember_me">Recuérdame</string>
    <string name="profile">Perfil</string>
    <string name="logout">Logout</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="change_language">Cambiar idioma</string>
    <string name="change_theme">Cambiar tema</string>
    <string name="go_back">Volver</string>
    <string name="title_register">REGISTRO</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="id_number">DNI</string>
    <string name="adress">Dirección</string>
    <string name="first_telephone">Teléfono1</string>
    <string name="second_telephone">Teléfono2</string>
    <string name="studies">Ciclo</string>
    <string name="dual_studies">Dual intensiva</string>
    <string name="no_dual_studies">No dual intensiva</string>
    <string name="remembered_user">usuario recordado</string>
    <string name="register_needed">debe registrarse</string>
    <string name="error">error</string>
    <string name="wrong_password">contraseña incorrecta</string>
    <string name="non_existing_user">el usuario no existe</string>
    <string name="no_conected">no conectado</string>
    <string name="ok">OK</string>
    <string name="password_updated">contraseña actualizada</string>
    <string name="passwords_dont_match">las contraseñas no coinciden</string>
    <string name="complete_fields">rellena todos los campos</string>
    <string name="language">idioma</string>
    <string name="theme">tema</string>
    <string name="user_registered">usuario registrado</string>
    <string name="change_your_password">debe cambiar la contraseña</string>
    <string name="first">Primero</string>
    <string name="second">Segundo</string>
    <string name="spanish">Español</string>
    <string name="portugues">Portugués</string>
    <string name="english">Inglés</string>
    <string name="basque">Euskera</string>
    <string name="light">Claro</string>
    <string name="dark">Oscuro</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancel</string>
    <string name="school_year">Curso</string>
    <string name="init">INICIO</string>
    <string name="profile_title">PERFIL</string>
    <string name="mail">mail</string>
</resources>