<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlelogin"
        android:textColor="@color/elorrieta1"
        android:textSize="48sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRememberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="358dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elorrieta_erreka_mari_93dac93" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="370dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:backgroundTint="@color/elorrieta1"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonForgotten"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.065"
        tools:layout_editor_absoluteX="162dp" />


    <Button
        android:id="@+id/buttonForgotten"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:text="@string/forgotten_password"
        android:backgroundTint="@color/elorrieta1"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.065"
        tools:layout_editor_absoluteX="163dp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRememberMe"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextViewUser"
        tools:layout_editor_absoluteX="103dp" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextViewUser"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:layout_editor_absoluteY="325dp"
        android:buttonTint="@color/elorrieta1"/>
</androidx.constraintlayout.widget.ConstraintLayout>